.dev-workstream/fails/batch-20-keyed-topics/commit-2/tests/CycloneDDS.Runtime.Tests/Gen/temp_c/CompositeKeyMessage.h
/****************************************************************

  Generated by Eclipse Cyclone DDS IDL to C Translator
  File name: tests\CycloneDDS.Runtime.Tests\Gen\temp_c/CompositeKeyMessage.h
  Source: D:\Work\FastCycloneDdsCsharpBindings\tests\CycloneDDS.Runtime.Tests\Gen\CompositeKeyMessage.idl
  Cyclone DDS: V0.11.0

*****************************************************************/
#ifndef DDSC_TESTS_CYCLONEDDS_RUNTIME_TESTS_GEN_TEMP_C_COMPOSITEKEYMESSAGE_H_E7B0E4E5C48C9AD25BD8E2106363C1EE
#define DDSC_TESTS_CYCLONEDDS_RUNTIME_TESTS_GEN_TEMP_C_COMPOSITEKEYMESSAGE_H_E7B0E4E5C48C9AD25BD8E2106363C1EE

#include "dds/ddsc/dds_public_impl.h"

#ifdef __cplusplus
extern "C" {
#endif

typedef struct CycloneDDS_Runtime_Tests_CompositeKeyMessage
{
  int32_t part1;
  int32_t part2;
  char * part3;
  double value;
} CycloneDDS_Runtime_Tests_CompositeKeyMessage;

extern const dds_topic_descriptor_t CycloneDDS_Runtime_Tests_CompositeKeyMessage_desc;

#define CycloneDDS_Runtime_Tests_CompositeKeyMessage__alloc() \
((CycloneDDS_Runtime_Tests_CompositeKeyMessage*) dds_alloc (sizeof (CycloneDDS_Runtime_Tests_CompositeKeyMessage)));

#define CycloneDDS_Runtime_Tests_CompositeKeyMessage_free(d,o) \
dds_sample_free ((d), &CycloneDDS_Runtime_Tests_CompositeKeyMessage_desc, (o))

#ifdef __cplusplus
}
#endif

#endif /* DDSC_TESTS_CYCLONEDDS_RUNTIME_TESTS_GEN_TEMP_C_COMPOSITEKEYMESSAGE_H_E7B0E4E5C48C9AD25BD8E2106363C1EE */
